New updated tutorial page

--- a/data_prep.html
+++ b/data_prep.html
@@ -104,7 +104,7 @@
 <ul>
 <li><p><strong>Medical records data</strong>: One or more CSV/TSV files (each with a header row), listing diagnosis events for the participants. Each record (row) must include:</p>
 <ul class="simple">
-<li><p>**Participant ID **– The same unique ID used in the phenotype data, linking each record to an individual.</p></li>
+<li><p><strong>Participant ID</strong> – The same unique ID used in the phenotype data, linking each record to an individual.</p></li>
 <li><p><strong>Diagnosis code</strong> – A diagnosis code (e.g., ICD-10 or ICD-9 code).</p></li>
 <li><p><strong>Date of diagnosis</strong> – The date of that diagnosis/event (format consistent with the phenotype dates, e.g., <code class="docutils literal notranslate"><span class="pre">YYYY-MM-DD</span></code>).</p></li>
 </ul>
@@ -132,14 +132,14 @@
 <li><p><strong>BMI</strong> – Body mass index category.</p></li>
 </ul>
 </li>
-<li><p><strong><code class="docutils literal notranslate"><span class="pre">dummy_EHR_ICD9.csv</span></code></strong> – Simulated EHR diagnoses coded in ICD-9 (10,188 records). Columns:</p>
+<li><p><strong><code class="docutils literal notranslate"><span class="pre">dummy_EHR_ICD9.csv</span></code></strong> – Simulated EHR diagnoses coded in ICD-9 (10,188 records), containing:</p>
 <ul>
 <li><p><strong>ID</strong> – Participant ID (matches the phenotype file).</p></li>
 <li><p><strong>dia_date</strong> – Diagnosis date.</p></li>
 <li><p><strong>diag_icd9</strong> – ICD-9 diagnosis code.</p></li>
 </ul>
 </li>
-<li><p><strong><code class="docutils literal notranslate"><span class="pre">dummy_EHR_ICD10.csv</span></code></strong> – Simulated EHR diagnoses coded in ICD-10 (1,048,576 records). Columns:</p>
+<li><p><strong><code class="docutils literal notranslate"><span class="pre">dummy_EHR_ICD10.csv</span></code></strong> – Simulated EHR diagnoses coded in ICD-10 (1,048,576 records), containing:</p>
 <ul>
 <li><p><strong>ID</strong> – Participant ID.</p></li>
 <li><p><strong>dia_date</strong> – Diagnosis date.</p></li>
